--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ layout: default
 {% assign tags = site.tags | sort %}
 {% for tag in tags %}				
 				<!--<li class="link-all"><a href="/tag/#{{ tag | first | slugify }}" style="font-size: {{ tag | last | size  |  times: 4 | plus: 80  }}%">{{ tag[0] | replace:'-', ' ' }} ({{ tag | last | size }})</a></li>-->
-				<li class="link-all"><a href="{{ "/tag/#{{ tag | first | slugify" }}" | prepend: site.baseurl }}" style="font-size: {{ tag | last | size  |  times: 4 | plus: 80  }}%">{{ tag[0] | replace:'-', ' ' }} ({{ tag | last | size }})</a></li>
+				<li class="link-all"><a href="{{ "/tag/#"{{ tag | first | slugify }}" | prepend: site.baseurl }}" style="font-size: {{ tag | last | size  |  times: 4 | plus: 80  }}%">{{ tag[0] | replace:'-', ' ' }} ({{ tag | last | size }})</a></li>
 {% endfor %}
 
 <!--"{{ "/" | prepend: site.baseurl }}"-->
