--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ layout: default
 <!--<h1>Tag Cloud</h1>-->
 {% assign tags = site.tags | sort %}
 {% for tag in tags %}
-{% for posts in site.tags.photo %}
+{% for post in site.tags.photo %}
 				<li class="link-all"><a href="{{ site.baseurl }}/tag/#{{ tag | first | slugify }}" style="font-size: {{ tag | last | size  |  times: 4 | plus: 80  }}%">{{ tag[0] | replace:'-', ' ' }} ({{ tag | last | size }})</a></li>
 {% endfor %}
 
