--- a/index.html
+++ b/index.html
@@ -106,8 +106,6 @@ layout: default
 
 
 {% for photo in site.photos %}
-<div class="tags">
-Tags
 <!--{% for tag in page.tags %} <div class='tag'><a href='/tag/#{{tag}}'>{{tag}}</a></div> {% endfor %}-->
 {% for tag in photo.tags %} <!--<div class='tag'><a href="{{ site.baseurl }}/tag/#{{tag}}" }}">{{tag}}</a></div> {% endfor %}-->
 				<!--<li class="link-all"><a href="/tag/#{{ tag | first | slugify }}" style="font-size: {{ tag | last | size  |  times: 4 | plus: 80  }}%">{{ tag[0] | replace:'-', ' ' }} ({{ tag | last | size }})</a></li>-->
@@ -122,11 +120,11 @@ Tags
 
 
 <!--<h1>Tag Cloud</h1>-->
-<!--{% assign tags = site.tags | sort %}
+{% assign tags = site.tags | sort %}
 {% for tag in tags %}				
 				<!--<li class="link-all"><a href="/tag/#{{ tag | first | slugify }}" style="font-size: {{ tag | last | size  |  times: 4 | plus: 80  }}%">{{ tag[0] | replace:'-', ' ' }} ({{ tag | last | size }})</a></li>-->
 				<li class="link-all"><a href="{{ site.baseurl }}/tag/#{{ tag | first | slugify }}" style="font-size: {{ tag | last | size  |  times: 4 | plus: 80  }}%">{{ tag[0] | replace:'-', ' ' }} ({{ tag | last | size }})</a></li>
-{% endfor %}-->
+{% endfor %}
 
 
 				</header>
