--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ Tags
 
 
 
-{% for post in site.categories[post] %}
+{% if {{post.tag}} contains "post" %}{% include tag-post.html %}{% endif %}
 
 <article id="post-160" class="post-160 jetpack-portfolio type-jetpack-portfolio status-publish format-standard has-post-thumbnail hentry jetpack-portfolio-type-movies jetpack-portfolio-tag-films jetpack-portfolio-tag-movies-2" itemscope itemprop="blogPost" itemtype="http://schema.org/BlogPosting">
 
